--- a/Tugas html/belajar flex box/Animation/styele.css
+++ b/Tugas html/belajar flex box/Animation/styele.css
@@ -44,10 +44,13 @@
 }
 @keyframes animasi1 {
   0% {
-    transform: rotate(0deg);
+    transform: translateX(0px) rotate(0deg);
+  }
+  50% {
+    transform: translateX(700px) rotate(0deg);
   }
 
   100% {
-    transform: rotate(360deg);
+    transform: translateX(0px) rotate(360deg);
   }
 }
